# la-vie-en-rose

./: .gitignore  CLAUDE.md  LICENSE  PROJECT.md  README.md  docker-compose.yml
.claude/rules/: ci-cd.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: backup.yml  ci.yml  dependency-review.yml  deploy.yml  provision.yml  restore.yml  scale.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: db.py  main.py  models.py
backend/app/api/: health.py
backend/app/core/: config.py  models.py
backend/app/domains/: __init__.py
backend/app/domains/geography/: __init__.py
backend/app/domains/proof/: __init__.py
backend/app/domains/stats/: __init__.py
backend/app/domains/walks/: __init__.py
backend/app/worker/: __init__.py  __main__.py  runner.py
backend/tests/: conftest.py  test_config.py  test_schema.py
docs/: database-schema.md  infrastructure.md  testing.md
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
infra/: fly.backend.toml  fly.frontend.toml  fly.postgres.toml
