[project]
name = "lvr-backend"
version = "0.1.0"
description = "la-vie-en-rose backend: API + ingestion worker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.15",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "db: requires a live PostGIS database (see tests/conftest.py)",
]

# Type checking. `standard` rather than `strict` on purpose: GeoAlchemy2 ships
# incomplete type information, and strict mode reports our own correct schema
# code as errors. Standard catches the mistakes that matter — a model and a
# query disagreeing — without teaching us to ignore the output.
[tool.pyright]
include = ["app", "tests"]
exclude = ["alembic/versions"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
